# pspy

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  INSTALL.rst  INSTALL_MACOS.rst  MANIFEST.in  README.md  README.rst  codecov.yml  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: testing.yml  wheels.yml
binder/: apt.txt  postBuild  requirements.txt
docs/: requirements.txt
docs/scientific_doc/: mcm.tex
docs/source/: conf.py  index.rst  modules.rst  pspy_utils.rst  so_cov.rst  so_map.rst  so_mcm.rst  so_spectra.rst  so_window.rst  sph_tools.rst
docs/source/latex/: Makefile  cov.tex  scientific_doc.tex
docs/source/notebooks/: Makefile  tutorial_io.html  tutorial_io.ipynb  tutorial_projection.html  tutorial_projection.ipynb  tutorial_purebb.html  tutorial_purebb.ipynb  tutorial_spectra_car_spin0and2.html  tutorial_spectra_car_spin0and2.ipynb  tutorial_spectra_healpix_spin0and2.html  tutorial_spectra_healpix_spin0and2.ipynb
notebooks/: Makefile  index.ipynb  tutorial_io.ipynb  tutorial_projection.ipynb  tutorial_purebb.ipynb  tutorial_spectra_car_spin0and2.ipynb  tutorial_spectra_healpix_spin0and2.ipynb
pspy/: __init__.py  _version.py  fft.py  flat_tools.py  meson.build  pspy_utils.py  so_config.py  so_consistency.py  so_cov.py  so_dict.py  so_map.py  so_map_preprocessing.py  so_mcm.py  so_mpi.py  so_spectra.py  so_window.py  sph_tools.py
pspy/cov_fortran/: cov_fortran.f90
pspy/mcm_fortran/: mcm_fortran.f90
pspy/tests/: generate_test_data.py  meson.build  parameters_test_data.yml  test_pspy_namaster.py  test_so_cov.py  test_so_dict.py  test_so_map.py  test_so_spectra.py
pspy/tests/data/: generate_test_data.py  parameters_test_data.yml  ref_spectra_spin0and2.pkl
scripts/: meson.build  test-pspy  test_pspy.py
test/: README.rst  test_analytic_cov_spin0.py  test_analytic_cov_spin0and2.py  test_projection.py  test_pspy_namaster_spin0.py  test_pspy_namaster_spin0and2.py  test_pspy_nmtCAR_spin0and2.py  test_spectra_spin0.py  test_spectra_spin0and2.py  tuto_analytic_cov_spin0and2.py  tuto_spectra_spin0.py
test/draft/: draft_purebb.py
tutorials/: README.rst  tuto_analytic_cov_spin0.py  tuto_analytic_cov_spin0and2.py  tuto_general_covariance_spin0and2.py  tuto_io.py  tuto_kspace_filter.py  tuto_mc_simulation_spin0.py  tuto_mc_simulation_spin0and2.py  tuto_pixwin.py  tuto_projection.py  tuto_purebb.py  tuto_spectra_spin0.py  tuto_spectra_spin0and2.py  tuto_window.py
tutorials/draft/: draft_purebb.py
