python_sources = [
  '__init__.py',
  'fft.py',
  'flat_tools.py',
  'pspy_utils.py',
  'so_config.py',
  'so_consistency.py',
  'so_cov.py',
  'so_dict.py',
  'so_map.py',
  'so_map_preprocessing.py',
  'so_mcm.py',
  'so_misc.py',
  'so_mpi.py',
  'so_spectra.py',
  'so_window.py',
  'sph_tools.py',
]
py.install_sources(
  python_sources,
  subdir: 'pspy'
)

subdir('tests')
