python_test_sources = [
  'tests/test_pspy_namaster.py',
  'tests/test_so_cov.py',
  'tests/test_so_dict.py',
  'tests/test_so_map.py',
  'tests/test_so_spectra.py',
]
py.install_sources(
  python_test_sources,
  subdir: 'pspy/tests'
)

python_data_sources = [
  'tests/data/generate_test_data.py',
  'tests/data/bode_almost_wmap5_lmax_1e4_lensedCls_startAt2.dat',
  'tests/data/parameters_test_data.yml',
  'tests/data/test_data.pkl',
]
py.install_sources(
  python_data_sources,
  subdir: 'pspy/tests/data'
)
