python_test_sources = [
  'test_pspy_namaster.py',
  'test_so_cov.py',
  'test_so_dict.py',
  'test_so_map.py',
  'test_so_spectra.py',
]
py.install_sources(
  python_test_sources,
  subdir: 'pspy/tests'
)

python_data_sources = [
  'data/generate_test_data.py',
  'data/bode_almost_wmap5_lmax_1e4_lensedCls_startAt2.dat',
  'data/parameters_test_data.yml',
  'data/test_data.pkl',
]
py.install_sources(
  python_data_sources,
  subdir: 'pspy/tests/data'
)
